[fix] missing background in landing page [fix] try..catch initialization in home.js [fix] security update - use of database tracking for sessions, and increased encryption

--- a/css/home.less
+++ b/css/home.less
@@ -160,6 +160,11 @@ blockquote {
 }
 
 ///////SKY//////////
+.sky{
+  height: 100%;
+  padding-bottom: 0px;
+}
+
 .day {
   background: @main-day;
 }
